--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:logo="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.SignYourApk"
         tools:targetApi="34"
